--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:hint="@string/email_hint"
-                android:id="@+id/email_login"
-                />
+                android:id="@+id/email_login" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -32,8 +31,7 @@
                 android:layout_margin="10dp"
                 android:hint="@string/password_hint"
                 android:inputType="textPassword"
-                android:id="@+id/password_login"
-                />
+                android:id="@+id/password_login" />
 
             <Button
                 android:layout_width="match_parent"
@@ -41,7 +39,8 @@
                 android:layout_margin="5dp"
                 android:text="@string/login_button"
                 android:id="@+id/login_button"
-                />
+                android:backgroundTint="@color/purple_500"
+                android:textColor="#FFFFFF" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -49,8 +48,7 @@
                 android:gravity="center"
                 android:id="@+id/forget_password"
                 android:text="@string/forget_password"
-                android:padding="5dp"
-                />
+                android:padding="5dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -58,8 +56,7 @@
                 android:gravity="center"
                 android:id="@+id/sign_up_login"
                 android:text="@string/sign_up"
-                android:padding="5dp"
-                />
+                android:padding="5dp" />
 
         </LinearLayout>
 
